<resources>
    <string name="app_name">Italian Lab</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="latest_requests">Latest Requests</string>
    <string name="other_requests">Other Requests</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="empty_images_adapter">There are no images yet</string>
    <string name="empty_videos_adapter">There are no videos yet</string>
    <string name="login_empty_phone">* Please use a phone number to sign in</string>
    <string name="login_invalid_phone">* Invalid phone number, phone number should be  11-digits</string>
    <string name="login_invalid_code">* Invalid Verification code, it should be 6-digits</string>
    <string name="login_signin">Sign In</string>
    <string name="login_empty_fields">* Please fill the empty fields</string>
    <string name="schedules_title">Schedules</string>
    <string name="requests_title">Requests</string>
    <string name="achievements_title">Achievements</string>
    <string name="profile_title">Profile</string>
    <string name="clinic_visit">Clinic Visit</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="home_visit">Home Visit</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full Name</string>
    <string name="specialization">Specialization</string>
    <string name="logout">Logout</string>
    <string name="add_doctor_hint">Type his phone number…</string>
    <string name="address">Address</string>
    <string name="add_reservation">Add reservation</string>
    <string name="reschedule">Reschedule</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="contact_us">Or contact us</string>
    <string name="app_signature">🅸🆃🅰🅻🅸🅰🅽🅻🅰🅱</string>
    <string name="verify_number">Verify</string>
    <string name="confirm_number">Confirm Number</string>
    <string name="confirm_number_body">Enter the code that we sent to </string>
    <string name="enter_the_code">Enter the code</string>
    <string name="account_creation">Account Creation</string>
    <string name="account_creation_body">Please fill the below fields to create account</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome Dr.Ahmed!</string>
</resources>